--- a/Sections/2_Theory_Models/ComputerPrograms.tex
+++ b/Sections/2_Theory_Models/ComputerPrograms.tex
@@ -19,7 +19,7 @@ These insights can lead to new discoveries and enhance our understanding of comp
 
 % The use of big data expands research capabilities by allowing studies to be conducted on a much larger scale whereas traditional scientific experiments often rely on a limited number of observations or samples, which may not capture the full complexity of real-world phenomena.
 
-\subsection{Result reproducibility}
+\subsubsection{Result reproducibility}
 
 In the frame of this thesis, result reproducibility can be divided in two steps.
 At synchrotrons, where experimental techniques become ever more complicated, the first step consists in the capacity for scientists to replicate experiments while obtaining consistent data.
@@ -44,10 +44,10 @@ Therefore, code-availability, access to raw data combined with metadata, and rep
 Reproducible results will result in a global improvement of confidence in new techniques, such as BCDI, which could subsequently result in growth of interest and community.
 Key problems are for example the difficulty to reconstruct highly strained objects, and determining a good metric that would allow scientists to \textit{blindly} trust reconstructed data, permitting a fully automatised data reduction workflows.
 
-\subsection{\textit{Python} in the \textit{Jupyter} environment}
+\subsubsection{\textit{Python} in the \textit{Jupyter} environment}
 
 The \textit{Jupyter Notebook} environment \parencite{Perez2007, Kluyver2016} was chosen for the development of data reduction and analysis tools during this thesis for its versatile, user-friendly and browser-based interface.
-Notebooks can be used to take notes during experiments, shared in the \textit{.ipynb} format or as \textit{.pdf} documents, or to create custom \textit{Python} functions, an accessible language that has gradually become one of the most popular, versatile \parencite{Perez2007, Newville2016} and widely-taught \parencite{Scopatz2015, McKinney2017, Boulle2019} programming languages in science.
+Notebooks can be used to take notes during experiments, shared in the \textit{.ipynb} format or as \textit{.pdf} documents, or to create custom \textit{Python} functions, an accessible language that has gradually become one of the most popular, versatile \parencite{Perez2007, Behnel2011, Newville2016, Ronaghi2017} and widely-taught \parencite{Ayer2014, Scopatz2015, McKinney2017, Boulle2019} programming languages in science.
 
 Moreover, \textit{Jupyter Notebook} has proven to be an effective tool for the reduction and analysis of synchrotron data, in terms of graphical user interface (GUI) \parencite{Martini2019a,Simonne2020}, but also in terms of supporting scientific communities looking for high-performance frameworks \parencite{jupyter_computing_4, jupyter_computing_1, jupyter_computing_3, jupyter_computing_2}.
 
