--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -27,6 +27,8 @@ The aim of the technique is to obtain geometrical information of the surface at 
 An example of surface reconstructions is given in fig. \ref{fig:SurfaceReconstructions} where the latest atomic layer (blue) does not have the same periodicity as the bulk layers (red).
 This phenomenon gives rise to additional signals at positions defined by how the periodicity of the reconstruction relates to the periodicity of the bulk structure in the $\vec{a}$ and $\vec{b}$ directions.
 In this example, the surface reconstructions can be described by the (\numproduct{2 x 4}) matrix \parencite{Wood1964}, that quantifies the relation between the surface reconstruction unit vectors ($\vec{a}_r, \vec{b}_r$) and the bulk unit vectors ($\vec{a}, \vec{b}$).
+A possible rotation of the reconstruction arrangement with respect to the bulk layer would result in a prefix in the notation.
+Let us take the example for which the orange atoms correspond to the Pt(100) surface, in that case the green reconstruction can be described as Pt(100)4x2-R\ang{0}.
 
 \subsection{Crystal truncation rods} \label{sec:CTR}
 
