--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -98,7 +98,7 @@ During this thesis, the horizontal configuration was used for SXRD experiments w
 Working in a vertical configuration is preferable for BCDI since it allows a larger range of incident angle ($\beta$, the incident angle in the horizontal configuration, is limited to \ang{3}).
 The mirrors, that focus the beam in the horizontal configuration, are removed from the optical path, the focus of the beam is then handled by specific focusing optics.
 
-The secondary slits, which are wide open during surface x-ray diffraction experiment, are closed to \qty{100}{\um} vertically and horizontally, acting as a secondary source during Bragg coherent diffraction imaging experiments, reducing the effective size of the source seen by the focusing optics \parencite{Jacques2010}.
+The secondary slits are closed to \qty{100}{\um} vertically and horizontally during BCDI experiments, acting as a secondary source during Bragg coherent diffraction imaging experiments, reducing the effective size of the source seen by the focusing optics \parencite{Jacques2010}.
 So called \textit{coherence} slits are placed just before the beam stop to select a homogeneous portion of the beam that impinges on focusing refractive lenses called Fresnel zone plates (FZP), designed to work at an energy of \qty{8.5}{\keV}.
 The use of Fresnel zone plates, that preserve the coherent wavefront, together with coherence slits has been proven to increase the coherent flux impinging on the sample \parencite{Schroer2008, Diaz2009, Mastropietro2011}.
 
@@ -150,7 +150,7 @@ During this thesis, the measurement process was further improved by taking advan
 When using the coherence setup (fig. \ref{fig:OpticalSetup}) with the diffractometer in the vertical geometry (fig. \ref{fig:Diffractometer}), the beam focused on the sample is about \qty{1}{\um} large vertically, the horizontal footprint depending on the incident angle between the beam and the sample.
 
 The incoming angle $\mu$ is set to a Bragg angle ($\theta$ in eq. \ref{eq:Bragglaw}) and the scattered x-rays are collected by setting the out-of-plane detector angle $\gamma$ at a position equal to $2\theta$ (similar to fig. \ref{fig:EwaldSphereSpecular}).
-Finally, by simultaneously moving the sample with the hexapod and recording the Bragg scattered intensity with the detector, it is possible to map the sample surface with a sub-micron resolution (fig. \ref{fig:SampleMapping}).
+Finally, by simultaneously moving the sample with the hexapod and recording the Bragg scattered intensity with the detector, it is possible to map the sample surface with a sub-micron resolution \parencite{Chahine2014}.
 
 An example of the mapping result is illustrated below in fig. \ref{fig:SampleMapping} with Pt nanoparticles for which the [111] crystallographic direction is parallel to the normal of the sample holder, the (111) Bragg peak was thus measured during the mapping process.
 
