--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -146,7 +146,7 @@ The polarization factor $P$ for scattered beams is defined as $P =  | \hat{\epsi
 \end{equation}
 
 The effect of the polarization of the incident beam is illustrated in figure \ref{fig:polarization_effect}.
-At synchtrons, working in the vertical plane ($\vec{x}, \vec{z}$) is preferable to maximize the intensity of the scattered field.
+At synchrotrons, working in the vertical plane ($\vec{x}, \vec{z}$) is preferable to maximize the intensity of the scattered field.
 This has pratical repercussions in surface x-ray diffraction for which it is preferable to work in a vertical geometry to scan large 2D areas of the reciprocal space.
 
 The total cross-section for the scattering event by a single free electron can be computed by integrating the differential cross-section over all the possible scattering angles, \textit{i.e.} by averaging all possible polarization directions \parencite{Willmott}.
