--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -1,14 +1,123 @@
-\section{Conclusion and perspectives}
+\section{Discussion}
+
+% Particle A, Temp ramp
+The reshaping of a Pt nanoparticle (particle \textit{A}) during heating from \qty{125}{\degreeCelsius} to \qty{600}{\degreeCelsius} under an inert gas flow was put into evidence, with an important evolution as a function of the sample temperature of the type of facets present on the particle substrate (fig. \ref{fig:AmaterasuFacetsEvolution}), and of the presence or not of dislocations at the interface (fig. \ref{fig:AmaterasuA}, \ref{fig:AmaterasuB}).
+
+The importance of the metal-support interactions for catalysis was demonstrated for smaller nanoparticles (below \qty{4}{\nm}) in a general study by van Deelen et al. \parencite*{vanDeelen2019}.
+In this study, the importance of taking into account the presence of interfacial strain when studying the facet strain was also highlighted with particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), similarly to other BCDI studies of catalytic reactions.
+For example, Kim et al. \parencite*{Kim2021} have measured different strain evolution for \{111\} facets depending on their orientation with the \ce{SrTiO_3} substrate (\ce{CO} oxidation, Pt-Rh nanoparticles, \qty{100}{\nm} large).
+Similar conclusions have been reached by Dupraz et al. \parencite*{Dupraz2022}, also during the oxidation of \ce{CO} with Pt nanoparticles (\qty{300}{\nm} large particle).
+
+Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\} \{212\} and \{211\} facets were otherwise detected
+One reconstruction at a higher temperature (\qty{600}{\degreeCelsius}) showed a hole in the Bragg electronic density near the particle substrate (fig. \ref{fig:AmaterasuB}).
+The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021} having an impact on the strain field.
+
+% Ammonia ox
+The oxidation of ammonia has been extensively studied by the means of surface techniques in the previous and current century as detailed in sec. \ref{sec:LiteratureAmmonia}.
+Since BCDI is still a recent technique first applied to catalysis less than 10 years ago \parencite{Ulvestad2016}, no comparative measurements could be found during the presence of ammonia or nitrogen based species.
+
+% Particle A
+The introduction of ammonia in the reactor at \qty{600}{\degreeCelsius} was linked to an inversion of the average facet strain for particle \textit{A} (fig. \ref{fig:AmaterasuFacetsEvolution}), together with the appearance of a dislocation network at the interface with the substrate (fig. \ref{fig:AmaterasuB}).
+Facets of the same structure and distance from the substrate showed similar strain state (fig. \ref{fig:AmaterasuStrain}).
+It is possible that a strong adsorption of ammonia induced such a modification of the strain field that the appearance of a dislocation network was provoked.
+Indeed, no variation of particle shape, or appearance of dislocation was observed throughout this thesis under the same condition, \textit{i.e.} without a change of temperature or atmosphere.
+Time-resolved measurements of the dynamics of the dislocation network as well as adsorption/desorption cycles could bring additional information supporting this hypothesis.
+
+The influence of the introduction of oxygen at \qty{600}{\degreeCelsius} could not be probed due to the loss of particle \textit{A}, which detached from the substrate.
+The high temperature reached by the nano catalyst during the exothermic oxidation of ammonia \parencite{Hatscher2008} could have resulted in a loss of quality of the epitaxial relationship with the substrate.
+
+Two additional particles, namely \textit{B} and \textit{C}, were measured at both \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, respectively before and after the activation temperature expected from the fast characterisation of the catalyst shown in fig. \ref{fig:TempRamps}.
+
+% Particle C
+The introduction of ammonia at \qty{300}{\degreeCelsius} can be linked to a global decrease of the heterogeneous strain in particle \textit{C}, whose surface consists exclusively of \{111\}, \{110\} and \{100\} facets, visible from the decrease of the strain field energy in fig. \ref{fig:D6SFE}, the return to a symmetrical diffraction pattern in fig. \ref{fig:D6Ortho}, and the decrease of the FWHM in all three directions in fig. \ref{fig:D6FWHM}.
+The opposite (same) effect was observed after removing (introducing) ammonia from the reactor at \qty{300}{\degreeCelsius} (\qty{400}{\degreeCelsius}), supporting the hypothesis of a nitrogen-rich (\ce{NH_2}, \ce{NH}, \ce{N}) adsorption/desorption induced hysteresis cycle on the particle surface.
+The mechanism of such a cycle could correspond to a decrease of the surface strain magnitude by adsorption, thus relaxing the particle bulk by removing nano defects present to accommodate the high surface strain.
+However, such a scenario implies changes in the surface strain when introducing ammonia, which are not visible since the reconstruction of the measurements performed under inert atmosphere do not converge towards a well defined support.
+
+The absence of change in the facet strain following the introduction of oxygen and during the oxidation of ammonia can be due to different phenomena.
+
+First, the change in the facet strain is too small to be detected due to the low spatial resolution of the experiment, meaning that it is damped by being averaged with \textit{bulk} layers.
+For example, oxygen adsorption induced strain on the Pt terminated \{100\} and \{111\} facets has been simulated to be nul \qty{8}{\nm} away from the surface in the bulk \parencite{Kim2021}.
+
+Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen-rich species being too strongly adsorbed on the particle surface to participate in the catalytic reaction.
+If this was indeed the case, it would mean that all three types of facets are poisoned at a \ce{NH_3} pressure equal to \qty{6}{\milli\bar}, showing a remarkably strong adsorption on many different atomic sites.
+A strong evolution of particle \textit{A} was also observed under the sole presence of ammonia at \qty{600}{\degreeCelsius}, with the main structural differences being the absence of \{110\} facets (fig. \ref{fig:AmaterasuFacetsEvolution}), and a dislocation network at the interface (fig. \ref{fig:AmaterasuB}).
+
+Thirdy, the oxidation of ammonia at ambient pressure does not involve the adsorption of oxygen on the catalyst surface, functionning \textit{via} an Eley-Rideal mechanism \parencite{Rideal1939}, the production of \ce{NO} and \ce{N_2O} happening by the reaction of gas-phase oxygen with nitrogen adsorbed species.
+The surface strain would then not change with different atmospheres.
+This finding would be in contradiction with some studies that have proved for example the importance of prior oxygen coverage on the reaction selectivity \parencite{Bradley1995}.
+\textcolor{Important}{need to find ambient pressure literature}
+
+Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when introducing oxygen in the reactor (fig. \ref{fig:D6Latpara}), which was not reproduced at \qty{400}{\degreeCelsius}.
+The origin of this transition is not yet clear.
+
+% Particle B
+Particle \textit{B}, which exhibits \{113\} facets on its surface at room temperature in addition to \{111\}, \{110\} and \{100\} facets, follows a different structural evolution during the experiment.
+Heating the sample to \qty{300}{\degreeCelsius} has decreased the visible presence of facets on the particle surface.
+While particle \textit{C} observes a large decrease of heterogeneous strain during the introduction of ammonia, particle \textit{B} suffers both a large increase of homogeneous strain with respect to the room temperature lattice parameter (fig. \ref{fig:B7Latpara}, up by \qty{0.09}{\percent}), together with an increase of the in-plane heterogeneous strain (fig. \ref{fig:B7FWHM}).
+This effect is not reversible when removing ammonia from the reactor at \qty{300}{\degreeCelsius}, nor it is observed again when introducing ammonia at \qty{400}{\degreeCelsius}.
+
+The introduction of oxygen slightly decreases the heterogeneous strain in the particle (fig. \ref{fig:B7FWHM}), the in-plane heterogeneous strain is stable during the oxidation of ammonia while the out-of-plane heterogeneous strain increases slightly.
+Thus, small changes are already visible at \qty{300}{\degreeCelsius} for particle \textit{B} during the oxidation of ammonia.
+
+The most impressive evolution occurs at \qty{400}{\degreeCelsius}, with the appearance of a defect in the particle, characterised by a second peak in the 3D scattered intensity, shifted in $\vec{q}_y$ with respect to the Bragg peak (fig. \ref{fig:B7Ortho}).
+The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the ratio between \ce{O_2}/\ce{NH_3} ratio is equal to one, an atmosphere under which a non reversible increase of homogeneous and heterogeneous strain is observed.
+Indeed, if the defect appeared during the increase of temperature to \qty{400}{\degreeCelsius}, the particle shape and strain state seems to be stable until specific reaction conditions are achieved.
+To safely link defect dynamics and catalytic activity, several oxidation cycles would have to be measured, as well a exposition of the particle to progressive amount of oxygen.
+
+% Compare oxidation with literature
+The exposition of platinum nanoparticles epitaxied on glassy carbon to oxygen at \qty{200}{\degreeCelsius} has been probed by Fernandez et al. \parencite*{Fernandez2019}, shown to be linked with an \qty{0.09}{\percent} homogeneous tensile expansion of the particle in the [111] direction, linked to the formation of platinum surface oxides.
+No such expansion was observed on particle \textit{B} or \textit{C} under the presence of oxygen during this experiment.
+The existence of platinum oxides was not monitored and can not be ruled out on particle \textit{B}, but are unlikely on particle \textit{C} that does not show any structural evolution under the presence of oxygen.
+
+Kim et al. \parencite*{Kim2018} have also shown that the introduction of oxygen was followed by its adsorption on edge sites, visible by magnitude changes in the neighbouring displacement field.
+They hypothesised could be at the origin of different nano catalyst reshaping phenomena measured during the oxidation of \ce{CO} \textit{via} SXRD \parencite{Nolte2008, Hejral2016}, TEM \parencite{Vendelbo2014} and also other BCDI studies \parencite{Abuin2019}.
+
+No reshaping of particle \textit{B} or \textit{C} was observed during the study of the ammonia oxidation with BCDI.
+However, a global reshaping of the nanoparticles was revealed by SXRD at \qty{600}{\degreeCelsius} under reacting conditions favouring oxygen rich products, \{113\} and \{110\} facets being probably replaced by \{100\} and \{111\} facets for which the CTR intensity increased.
+This reshaping was not detected at lower temperatures, no decrease of the [1$\bar{1}$3] CTR could be identified at \qty{300}{\degreeCelsius} or \qty{500}{\degreeCelsius}, meaning that the \{113\} facets present at room temperature on particle \textit{B} may yet still exist at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
+A more detailed analysis of the 3D scattered intensity around the (111) Bragg peak may reveal if the particle has effectively lost the \{113\} facets or not.
+
+A particle with a similar shape to that of particle \textit{B} was measured by Dupraz et al. \parencite{Dupraz2022}, \{113\} facets are still visible during the presence of oxygen in the cell.
+The spatial resolution of the experiment is much higher than in the present study, due to the very high brilliance of Petra III in comparison with other $3^{rd}$ generation synchrotrons \parencite{Bilderback2005}.
+%Interestingly, they have also shown a different behaviour when exposing the catalyst to oxygen for the third time, after some \ce{CO} oxidation cycles.
+A relaxation of the out-of-plane heterogeneous strain $\epsilon_{zz}$ was observed on all facets (besides ($\bar{1}$10)-type facets) during the presence of oxygen in the cell.
+No such relaxation was observed during this experiment, which supports that we are effectively measuring not the effect of the oxidation of the particle surface, but of the adsorption/desorption of species linked to the catalytic reaction.
+
+% Defects
+The presence of steps/surface defects on Pt (111) facets has been shown to increase the catalytic activity of Pt nanoparticles \parencite{Segner1984, Chen2012}.
+Indeed, defects have an impact of the local strain field, which can in turn influence the adsorption properties of molecules taking part in the reaction.
+During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, favouring specific surface moieties and thus influencing the catalyst selectivity.
+
+Similarly to our results on nanoparticle \textit{B}, Kim et al. \parencite*{Kim2019} have measured the defect dynamics on a Pt nanoparticle during the catalytic methane oxidation.
+They have shown a reversible transition of the particle shape induced by the adsorption of oxygen at \qty{425}{\degreeCelsius} (no indication of the oxygen partial pressure), no such transition was observed at \qty{325}{\degreeCelsius}.
+A second peak has been observed in the diffraction pattern in the $\vec{q}_z$ direction, \qty{10}{\minute} after the introduction of oxygen, which is accompanied by an increase of the strain field energy, and the presence of defects in the particle.
+
+Two main differences are noted in the current study, first a defect seems to appear on particle \textit{B} when \textit{heating} the sample up to \qty{400}{\degreeCelsius}, and not during reacting conditions.
+Secondly, the transformation of the particle shape is not reversible upon removal of the reactants.
+The reaction product partial pressures can be seen to drop in the minutes following the return to inert atmosphere at \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}), which shows that the sample has stopped its catalytic activity.
+From the evolution of the strain field energy, the lattice parameter, and the FWHM, it is likely that the magnitude of the defect appearing at \qty{400}{\degreeCelsius} under inert atmosphere has been increased from the reaction, which irreversibly transformed the particle shape.
+Defect dynamics have also been reported during the catalytic oxidation of \ce{CO} on Pt nanoparticles \parencite{Carnis2021b} using BCDI.
+
+These result tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
+The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of nanoparticle surface.
+Interestingly the change in the particle strain field is only visible after a certain \ce{O_2}/\ce{NH_3} ratio is reached (fig. \ref{fig:B7SFE}, \ref{fig:B7FWHM}), which can be linked to a transition to the adsorption of oxygen rich species (e.g. \ce{NO}, \ce{N_2O}) on the catalyst surface.
+
+% RGA
+Reaction products were detected at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGANanoparticlesBCDIComparison}), overall an oxygen favoured \ce{O_2}/\ce{NH_3} ratio resulted in a higher proportion of \ce{NO} and \ce{N_2O}, which enabled us to probe the relationship between strain and catalyst selectivity.
+Interestingly, an \textit{activation} of the sample was observed at both \qty{300}{\degreeCelsius} (fig. \ref{fig:RGA300BCDINanoparticles}) and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGA400BCDINanoparticles}).
+No such effect was observed at \qty{300}{\degreeCelsius} in the previous experiment when using the non-patterned sample during surface x-ray diffraction (fig. \ref{fig:RGASXRDNanoparticlesComparison}).
+The only difference in the history of both samples being that the patterned sample was exposed to reacting conditions at \qty{600}{\degreeCelsius} for approximately \qty{1}{\hour} before this experiment.
+This transition in the product partial pressures does not correspond to the condition at which particle \textit{B} showed a transition in terms of strain field energy or FWHM at \qty{400}{\degreeCelsius}, which occurred under an equal amount of ammonia and oxygen in the reactor.
+This transition could although be a precursor to the \textit{activation} process, keeping in mind that, as underlined by this experiment, the large difference in shape of the nanoparticles on the sample implies different structural evolution under various atmospheres.
+
+% conclude
+To conclude, we have shown that it is of utmost importance to probe different nanoparticles before drawing a conclusion regarding their global behaviour during a heterogeneous catalytic reaction.
+The importance of the particle shape, \textit{i.e.} facet coverage as well as initial strain state was put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{Ar} and \ammonia.
+The presence of defect in particle \textit{B} was linked to an evolution of the particle strain state and shape once an oxygen rich atmosphere was reached in the reactor, favouring the production of \ce{NO} and \ce{N_2O}.
 
 This experiment has both demonstrated the value and limits of Bragg coherent diffraction imaging when studying heterogeneous catalytic reactions.
-The instrumental procedure is very time-consuming, especially at the SixS beamline for which two weeks of beamtime are in general needed to perform an experiment, the first week being used to install the BCDI setup and to align the sample in the focal plane of the beam.
-The recent improvement of the instrumental setup (rocking curves performed in Fly mode instead of step-by-step mode, sample scanning in Bragg conditions to find the nanoparticles, sapphire window in the dome) tend in the right direction since, as was demonstrated in this study, BCDI is of little use if one does not have the time to measure multiple reflections during an experiment.
+The recent improvement of the instrumental setup (rocking curves performed in fly mode instead of step-by-step mode, sample scanning in Bragg conditions to find the nanoparticles, sapphire window in the dome) tend in the right direction.
 The planned upgrade of SOLEIL to a $4^{th}$ generation synchrotron will also play a key role in the hierarchy of SixS in the very competitive list of coherent imaging beamlines, the current resolution of the experiment being too low to properly resolve the smallest facets present of the particles, to distinguish between facets with similar orientations,to observe the growth of surface oxides or the strain in the topmost atomic layers.
 
-Nevertheless, the evolution of Pt nanoparticles during a temperature ramp from \qty{25}{\degreeCelsius} to \qty{600}{\degreeCelsius} was successfully measured in which the reshaping of the particles as a function of temperature was put into evidence, with the appearance of dislocation loops and facets, together with the importance of the presence of a substrate on the displacement field.
-The importance of probing different nanoparticles before drawing a conclusion to their global behaviour was also put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{Ar} and \ammonia.
-The role of different facets in the stability of the particle was shown.
-
-If the oxidation of ammonia was never before studied using BCDI, the exposition of platinum nanoparticles to oxygen has been probed first by Fernandez et al. \cite*{Fernandez2019} which showed that it coincided with an increase of the
-
-An upgraded beamline could allow future BCDI studies of the oxidation of ammonia, revealing the 3D structural dynamics of the hysteresis cycle identified on single crystal by \cite{Resta2020a}, or give additional detail regarding the presence of surface oxides on specific facets, as seen in the next chapter.
+In order to have a better understanding of surface dependent effects on the catalyst selectivity, and to probe for the possible growth of surface oxide during similar oxygen pressures, specific facets have been measured by SXRD, presented in the next chapter.
