--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -1,10 +1,10 @@
 \section{Introduction}
 
-%reaction
+% Reaction
 During the catalytic oxidation of ammonia, if Pt catalysts were first used when aiming at the production of \ce{NO}, Pt-Rh catalysts have then proven to be more effective since the 1920s when Rhodium was added to the catalyst \parencite{Handforth1934, Heck1982}.
 Recently, the ammonia oxidation reaction over a \ce{Pt_{25}Rh_{75}}(001) single crystal was studied with a surface science approach by operando techniques such as near-ambient pressure X-ray photoemission spectroscopy (NAP-XPS) and surface x-ray diffraction (SXRD) combined with mass spectrometry \parencite{Resta2020a}.
 It was shown that \ce{NO} production coincides with significant changes of the surface structure and the formation of a \ce{RhO_2} surface oxide.
-Moreover, changes in the surface relaxation related to the catalyst selectivity as well as the presence of an hysteresis cycle in the reaction were reported.
+Moreover, changes in the surface relaxation related to the catalyst selectivity as well as to the presence of an hysteresis cycle in the reaction were reported.
 
 % Single crystal ok but
 Using single crystals as models to understand \textit{in-situ} and \textit{operando} the structure-activity relationship offers some perks such as a large surface area which increases the surface signal (lowering the pressure gap with some techniques such as XPS), and the possibility to isolate specific facets to progressively build up the understanding of the role of the sample surface on the catalytic activity \parencite{Hejral2016, Resta2020a}.
@@ -12,8 +12,8 @@ However, they fail when aiming at closing the material gap since they only exhib
 
 % use nanoparticles
 In order to push for the reduction of the material gap as well as the pressure gap in heterogeneous catalysis, Pt nanoparticles have been used in this study, approaching the size of individual grains on the industrial catalysts \cite{} while exhibiting many different types of facets on their surface.
-Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles.
-Recent studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
+Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles, recently studied as well during the oxidation of carbon monoxide \parencite{Kim2021}, in which the compositional strain must also be taken into account \parencite{Kawaguchi2019}.
+Moreover, studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
 
 % sxrd
 It is first intended to measure the total signal scattered from \ce{Al_2O_3}-supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline of synchrotron SOLEIL.
@@ -30,19 +30,19 @@ Therefore, phenomena inducing structural change such as particle re-faceting/res
 % bcdi
 To obtain a more detailed picture of the phenomena at play, surface x-ray diffraction which provides ensemble-averaged properties when studying nanoparticles will be followed by the use of another technique which will bring information on the structural behaviour of single nanoparticles.
 
-With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of isolated nanoparticles to changes in the gas mixtures will be measured under \textit{in situ} and \textit{operando} conditions, enabling us to probe more deeply the structure evolution of single facets during heterogeneous catalytic reactions (sec. \ref{sec:FacetAnalysis}).
+With Bragg coherent diffraction imaging (BCDI), the individual three-dimensional (3D) structural response of isolated nanoparticles to changes in the gas mixtures will be measured under \textit{in situ} and \textit{operando} conditions, enabling us to probe in detail the structure evolution of single facets during heterogeneous catalytic reactions (sec. \ref{sec:FacetAnalysis}).
 
 A careful in situ analysis of the properties of the nanoparticles (size, shape, strain, re-faceting, support interaction, oxide formation, etc.) in 3D during the oxidation of ammonia is of essential importance to gain more understanding of the behaviour of these nanocrystals during a catalytic reaction.
 
-However, it must be ensured that the nanoparticles do not move or change their epitaxial relationship with the substrate during the exposition to reacting conditions at high temperatures.
+However, it must first be ensured that the nanoparticles do not move or change their epitaxial relationship with the substrate during the exposition to reacting conditions at high temperatures.
 Therefore, the preceding SXRD experiment will also aim at resolving the evolution of the epitaxial relationship between the Pt nanoparticles and the \ce{Al_2O_3} substrate before measuring single nanoparticles with Bragg coherent diffraction imaging, during which the beam is reduced to micrometric size, and for which a movement of the nanoparticles prevents the measurements of rocking curves due to loss of alignment.
 Both BCDI and SXRD can be applied to high gas pressures due to the x-rays’ high penetration in gasses.
 
-\subsection{Platinum nanoparticles synthesis}\label{sec:PtParticles}
+\subsection{$\alpha-$\ce{Al_2O_3} supported platinum nanoparticles synthesis}\label{sec:PtParticles}
 
 The platinum nanoparticles were synthesised thanks to a collaboration with the Israel Institute of Technology (Technion, collaboration with Dr. Eugene Rabkin), their use first showcased in the work by Dupraz et al. \parencite*{Dupraz2017}.
 A 30 nm thick homogeneous layer of platinum is deposited at room temperature on a [001] oriented alumina ($\alpha-$\ce{Al_2O_3}) substrate, which crystallises in a hexagonal unit cell.
-The Pt nanocrystals have their c-axis oriented along the [111] direction, normal to the [001] $\alpha-$\ce{Al_2O_3} substrate.
+The Pt nanocrystals have their c-axis oriented along the [111] direction, normal to the (0001) plane of the $\alpha-$\ce{Al_2O_3} substrate.
 A mask is then applied on the sample and a lithographic process route ensures that the platinum layer transforms to nanoparticles that are between 100 and 1000 nm large, epitaxied on the substrate surface.
 
 Two different samples are used during the oxidation of ammonia.
@@ -66,7 +66,7 @@ After dewetting and heating at \qty{1100}{\degreeCelsius} for \qty{30}{\minute},
 \end{figure}
 
 The epitaxial relationship between platinum and $\alpha$-\ce{Al_2O_3} (also known as sapphire) has been shown to consist into the superposition of the Pt [111] plane on top of the $\alpha$-\ce{Al_2O_3} [0001] plane, \textit{i.e.} Pt[111]||Al$_2$O$_3$[0001] (fig. \ref{fig:Epitaxy} - \cite{Farrow1993}).
-The {110} platinum planes are perpendicular to the Pt [111] plane, the second-neighbour Pt atoms are arranged in a hexagonal pattern that is only \qty{0.9}{\percent} larger than the basal-plane unit of sapphire at room temperature.
+The \{110\} platinum planes are perpendicular to the Pt (111) plane, the second-neighbour Pt atoms are arranged in a hexagonal pattern.
 
 \begin{minipage}{0.55\linewidth}
     \centering
@@ -94,13 +94,13 @@ Lattice strain in diffraction is usually defined as the difference between the r
 In this case, the misfit strain at the platinum-alumina interface can be computed using eq. \ref{eq:MisfitStrain}, the reference lattice parameter is equalled to the in-plane lattice parameter of sapphire, while the lattice parameter of the larger hexagonal arrangement of the platinum atoms on the (111) surface is equal to $\sqrt{3} a_{Pt} / \sqrt{2} $.
 At room temperature, the misfit strain computed from literature values ($a_{Pt} = \qty{3.9242}{\angstrom}$, $a_{Sapphire} = \qty{4.7602}{\angstrom}$) is computed to be equal to $\epsilon = \qty{0.96}{\percent}$.
 
-\subsection{Catalysis reactor calibration}
+\subsection{Catalysis reactor calibration for near-ambient pressure \textit{operando} studies}
 
 The catalytic activity of the platinum nanoparticles was first studied as a function of the temperature to (i) be certain that the sample is sufficiently catalytically active for the reaction products to be detected by the mass spectrometer, (ii) identify the catalyst light-off temperature and (iii) observe an evolution of the product selectivity as a function of the temperature.
 Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the oxidation of ammonia.
 
 The heater temperature was calibrated by measuring the temperature in the reactor at different pressures by the means of a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a), \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
-The experimental data points were fit to be able to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.5}{\bar} of \ce{Ar}).
+The experimental data points were fit to be able to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.3}{\bar} of \ce{Ar}).
 The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
 Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
 
@@ -120,7 +120,7 @@ Moreover, the same inert gas used to set the reactor pressure - Argon - is used 
 \label{tab:ThermalConductivity}
 \end{table}
 
-A temperature ramp at a reactor pressure of \qty{0.5}{\bar} (fig. \ref{fig:TempRamps} - b) was carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions, \textit{i.e.} a constant gas flow of \qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, and \qty{1}{\ml\per\min} of \ce{NH_3}.
+A temperature ramp at a reactor pressure of \qty{0.3}{\bar} (fig. \ref{fig:TempRamps} - b) was carried out to probe the evolution of the reaction products as a function of the temperature under reacting conditions, \textit{i.e.} a constant gas flow of \qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, and \qty{1}{\ml\per\min} of \ce{NH_3}.
 In the frame of this thesis, the same ratio between incoming gas flows in assumed to be respected between the different gas partial pressures, in this case the partial pressure of oxygen is then equal to \qty{80}{\milli\bar}, the partial pressure of ammonia to \qty{10}{\milli\bar}, and the partial pressure of argon to \qty{410}{\milli\bar}.
 
 \begin{figure}[!htb]
@@ -129,7 +129,7 @@ In the frame of this thesis, the same ratio between incoming gas flows in assume
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/Test_Reactor_CO2_2021_01/Figures/TempRamp2.pdf}
     \caption{
         a) Temperature inside the reactor cell measured with a type C thermocouple under vacuum and different \ce{Ar} pressures.
-        b) Partial pressures evolution under a constant gas flow (\qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, \qty{1}{\ml\per\min} of \ce{NH_3}) at a reactor pressure of \qty{0.5}{\bar} during increasing and decreasing (low transparency) temperature ramp to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second}.
+        b) Partial pressures evolution under a constant gas flow (\qty{41}{\ml\per\min} of \ce{Ar}, \qty{8}{\ml\per\min} of \ce{O_2}, \qty{1}{\ml\per\min} of \ce{NH_3}) at a reactor pressure of \qty{0.3}{\bar} during increasing and decreasing (low transparency) temperature ramp to \qty{650}{\degreeCelsius} with 100 steps, each lasting \qty{10}{\second}.
         The partial pressure of oxygen is omitted for simplicity.
     }
     \label{fig:TempRamps}
@@ -153,13 +153,13 @@ According to these primary results, the study of the oxidation of ammonia was or
     \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
     \midrule
     \midrule
-    50 & 0 & 0 & 500 & 500 & 0 & 0 & Catalyst state without reactants (unactive) \\
-    49 & 0 & 1 & 500 & 490 & 0 & 10 & Ammonia adsorption \\
-    48.5 & 0.5 & 1 & 500 & 485 & 5 & 10 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
-    48 & 1 & 1 & 500 & 480 & 10 & 10 &  \\
-    47 & 2 & 1 & 500 & 470 & 20 & 10 &  \\
-    41 & 8 & 1 & 500 & 410 & 80 & 10 & \\
-    50 & 0 & 0 & 500 & 500 & 0 & 0 & Returning to pristine state \\
+    50 & 0 & 0 & 300 & 300 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    49 & 0 & 1 & 300 & 294 & 0 & 6 & Ammonia adsorption \\
+    48.5 & 0.5 & 1 & 300 & 291 & 3 & 6 &  \multirow{4}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio on the \\ catalyst selectivity and structure \end{tabular}}\\
+    48 & 1 & 1 & 300 & 288 & 6 & 6 &  \\
+    47 & 2 & 1 & 300 & 282 & 12 & 6 &  \\
+    41 & 8 & 1 & 300 & 276 & 18 & 6 & \\
+    50 & 0 & 0 & 300 & 300 & 0 & 0 & Returning to pristine state \\
     \bottomrule
     \end{tabular}%
 }
