--- a/Sections/4_Results_SingleCrystals/100.tex
+++ b/Sections/4_Results_SingleCrystals/100.tex
@@ -1,5 +1,5 @@
 \newpage
-\section{Surface x-ray diffraction on a Pt (100) single crystal} \label{sec:SXRD100}
+\section{Pt (100) single crystal studied at \qty{450}{\degreeCelsius}} \label{sec:SXRD100}
 
 % check values for in plane lattice parameter from orientation matrix
 % time since oxidation
@@ -21,7 +21,7 @@ The out-of-plane vector $\vec{c}_{(100)}$ is perpendicular to the (100) plane, a
     \label{fig:SurfaceUnitCellPt100}
 \end{SCfigure}
 
-\subsection{Ammonia oxidation cycle}
+\subsection{Oxide growth under \qty{80}{\milli\bar} of oxygen}
 
 Reciprocal space in-plane maps were collected using the same experimental setup and at the same atmospheres detailed in tab. \ref{tab:ConditionsSXRD}, to probe the structural evolution of the sample during the oxidation of ammonia.
 The total pressure is always kept to \qty{500}{\milli\bar}.
@@ -76,9 +76,8 @@ Corresponding interplanar spacings were computed from the position of the peaks,
     \label{fig:FitPt100LScans}
 \end{figure}
 
-Bulk \ce{Pt_3O_4} was reported to crystallise in a simple cubic structure with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, Muller1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
-The 3D structure of bulk \ce{Pt_3O_4} is presented in fig. \ref{fig:Pt3O4}.
-The (212) and (232) Bragg peaks are not allowed reflections.
+Bulk \ce{Pt_3O_4} was reported to crystallise in a cubic structure (space group $P_{m3n}$) with a lattice parameter equal to \qty{5.65}{\angstrom} \parencite{Galloni1941, Galloni1952, Muller1968}, more recent studies have proposed a theoretical value of \qty{5.59}{\angstrom} \parencite{Seriani2006}, already presented in tab. \ref{tab:PtOxides}, similarly to the parameters reported in this study.
+The 3D structure of bulk \ce{Pt_3O_4} is presented in fig. \ref{fig:Pt3O4}, the (212) and (232) reflections are not allowed.
 
 \begin{SCfigure}
     \centering
@@ -106,6 +105,8 @@ For bulk \ce{Pt_3O_4} this would correspond to approximately 11 unit cells.
     }
     \label{fig:MapsPt100B}
 \end{figure}
+
+\subsection{Near ambient pressure ammonia oxidation cycle}
 
 Introducing ammonia in the reactor has resulted in the loss of contact with the sample heater, from the corrosion of the screws responsible for the contact on the sample holder.
 Nevertheless, half of the large reciprocal space in-plane maps could be measured prior to the loss of alignment (fig. \ref{fig:MapsPt100B}), in which the red circled peaks corresponding to \ce{Pt_3O_4} are still visible, the two other peaks that could have been measured at (0.93, -0.5) and (0.5, -0.93) have disappeared.
@@ -185,6 +186,9 @@ Out-of-plane measurements were performed perpendicular to two peaks, also presen
 \end{figure}
 
 After removing oxygen from the reactor, only the first order reflections corresponding to the hexagonal structures could be detected during the measurement of the reciprocal space in-plane map (fig. \ref{fig:MapsPt100C}), the following measurement under Argon showed a clean Pt (100) surface.
+
+\subsection{Oxide growth under \qty{5}{\milli\bar} of oxygen}
+
 To make sure that the hexagonal structure was related to the reaction conditions and not only to a lower pressure of oxygen in the reactor, a partial pressure of \qty{5}{\milli\bar} of oxygen was set.
 The following measurement showed the presence of many peaks that appeared in the first hour of the measurement.
 A second map was measured directly after the end of the first map, in which none of the newly detected peaks could be detected.
