--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -1,31 +1,8 @@
 \textcolor{red}{State the main conclusions of your study. State explicitly how and to what extent you have fulfilled your aims and objectives/answered your research questions/proved your hypotheses (whichever is appropriate). Your conclusions should follow logically from your findings and not contain any new material.}
 
-\section{Research Aims}
+\section{Research aim}
 
 
-\lipsum
+\section{Perspectives}
 
-
-\section{Research Objectives}
-
-
-\lipsum
-
-
-\section{Practical Implications}
-
-
-\lipsum
-
-
-\section{Future Research}
-
-
-\lipsum
-
-
-\section{Chapter Summary}
-
-
-\lipsum
-
+A detailed study of the impact of trying to improve the image resolution by increasing the distance from the centre of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
