--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -50,7 +50,7 @@ Propriétés catalytiques à l'échelle nanométrique sondées par diffraction d
 \footnotesize Référent: : voir annexe\\
 \vspace{15mm}
 
-\textbf{Thèse présentée et soutenue à .....,\\ le .... 2023, par}\\
+\textbf{Thèse présentée et soutenue à Paris,\\ le 19/12/2023, par}\\
 \bigskip
 \Large {\color{Prune} \textbf{David SIMONNE}}
 
@@ -65,18 +65,18 @@ Propriétés catalytiques à l'échelle nanométrique sondées par diffraction d
 \arrayrulecolor{Prune}
 {\footnotesize \textbf{Composition du jury}}\\
 & \\
-\textbf{Prénom Nom} &   Président/e\\ 
-Titre, Affiliation & \\
-\textbf{Prénom Nom} &  Rapportrice \\ 
-Titre, Affiliation   &   \\ 
-\textbf{Prénom Nom} &  Rapporteur \\ 
-Titre, Affiliation  &   \\ 
-\textbf{Prénom Nom} &  Examinatrice \\ 
-Titre, Affiliation   &   \\ 
-\textbf{Prénom Nom} &  Examinateur \\ 
-Titre, Affiliation   &   \\ 
-\textbf{Prénom Nom} &  Examinateur \\ 
-Titre, Affiliationt   &   \\ 
+\textbf{Alessandro Coati} & Présidente \\
+Dr., Synchrotron SOLEIL & \\
+\textbf{Andreas Stierle} & Rapporteur \\
+Professor, University of Hamburg / DESY & \\
+\textbf{Thomas Cornélius} & Rapporteur \\
+Directeur de Recherche, IM2NP & \\
+\textbf{Dina Carbone} & Examinatrice \\
+Researcher, Lund University & \\
+\textbf{Claire Lauhle} & Examinatrice \\
+Maitre de conférence, Université Paris-Saclay & \\
+\textbf{Virginie Chamard} & Examinatrice \\
+Chargée de Recherche, Institut Fresnel & \\
 
 \end{tabular} 
 
@@ -85,11 +85,11 @@ Titre, Affiliationt   &   \\
 \arrayrulecolor{Prune}
 {\footnotesize \textbf{Direction de la thèse}}\\
 & \\
-\textbf{Alessandro Coati} & Directeur\\
+\textbf{Alessandro Coati} & Directeur \\
 Dr., Synchrotron SOLEIL & \\
-\textbf{Andrea Resta} & Co-directeur\\
+\textbf{Andrea Resta} & Co-directeur \\
 Dr., Synchrotron SOLEIL & \\
-\textbf{Marie-Ingrid Richard} & Co-directrice\\
+\textbf{Marie-Ingrid Richard} & Co-directrice \\
 Dr., CEA Grenoble & \\
 
 \end{tabular} 
