--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -47,16 +47,16 @@ Moreover, if the adsorption is too strong, the product of the reaction is not ab
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ER.pdf}
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/LH.pdf}
     \caption{
-        In the Elley Rideal mechanisms (a) one of the reactants interacts directly from the gas phase with an adsorbed layer of the other reactant, whereas for the Langmuir Hinshelwood mechanism (b) both of the reactants are adsorbed on the catalyst's surface.
+        In the Eley Rideal mechanisms (a) one of the reactants interacts directly from the gas phase with an adsorbed layer of the other reactant, whereas for the Langmuir Hinshelwood mechanism (b) both of the reactants are adsorbed on the catalyst's surface.
         \textcolor{Important}{ADD ARROWS, ENERGY PATH FOR REAGENTS; ETC ...}
     }
     \label{fig:Mechanisms}
 \end{figure}
 
 In a founding study in \cite*{Langmuir1922}, Langmuir detailed the possible mechanisms of actions for heterogeneous catalysis.
-When studying bi-molecular reactions, the Langmuir–Hinshelwood and Elley-Rideal mechanisms are two main mechanisms of interest \parencite{Bratan2022}.
+When studying bi-molecular reactions, the Langmuir–Hinshelwood and Eley-Rideal mechanisms are two main mechanisms of interest \parencite{Bratan2022}.
 In the Langmuir–Hinshelwood mechanism, both reactants are adsorbed in nearby sites at the surface of the catalyst, and react on the surface to form the product which is subsequently desorbed from the surface \parencite{Prins2018, ROSS2019}.
-In the Elley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{Rideal1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
+In the Eley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{Rideal1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
 
 % In the third mechanism, an atom from the surface layer of the catalyst reacts with an adsorbed reactant, which creates a vacancy in his original position on the surface when the products is desorbed.
 % The vacancy is then replaced by an atom that comes from from the bulk or the gas phase \parencite{MARS1954, Doornkamp2000}.
@@ -72,13 +72,15 @@ The first step towards the use of these experimental methods is to understand wh
 
 \subsection{Active sites in heterogeneous catalysis}
 
-Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximise the surface area to volume ratio, increasing the number of available active sites for catalysis \parencite{Vogt2022}.
-This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, and at the origin of the increase of interest on nanoparticle catalysis \parencite{Che1989, Molenbroek2009, VanSanten2010, Schauermann2013}.
+Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximise the surface area to volume ratio, increasing the number and variety of available active sites for catalysis, while favouring the emergence of edges and corners \parencite{Zambelli1996, Hendriksen2010, Vogt2022}.
+This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, by controlling and investigating their shape \parencite{Lee2006, Tian2007, Bratlie2007, Lee2009}, bringing forward nanoparticle catalysis \parencite{Che1989, Raimondi2005, Arico2005, Molenbroek2009, VanSanten2010, Schauermann2013}.
 As an example, platinum (Pt) nanoparticles (NPs) are of great interest for the petrochemical industry \parencite{Astruc2005}, fuel cell technology and for automobile exhaust gas purification \parencite{Heck2001}.
+The formation of surface oxides on specific facets of Pt-Rh nanoparticles has also been correlated with an increased activity during the oxidation of \ce{CO} \parencite{Hejral2018}.
+
 The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{Winterbottom1967, Boukouvala2021}.
-The orientation and structure of each facet on the nanoparticle surface can be described by its Miller (hkl) indices.
-Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Jiang2009}.
-\cite{CalleVallejo2014}, \cite*{CalleVallejo2018} have used density functional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
+The orientation and structure of each facet on the nanoparticle surface, described by its Miller (hkl) indices, has been shown to have a key role in the surface strain field and in the adsorption properties of the catalysts \parencite{Zhou2012, Wu2017, Wu2021}.
+Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Huang2008, Jiang2009}.
+\cite{CalleVallejo2014}, \cite*{CalleVallejo2015}, \cite*{CalleVallejo2018} have used density functional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
 The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
 \textcolor{Important}{CalleVallejo2023?}
 
@@ -108,10 +110,17 @@ The activity of single facets can also be studied with \textit{single crystals},
 
 \subsection{Linking strain and reactivity}
 
-A modern theoretical approach to the interaction between surface and adsorbates in heterogeneous catalysis has been proposed by Hammer, Norskov and Mavrikakis \parencite*{Hammer1995, Mavrikakis1998, Hammer2000} for transition metals, which is the main focus of this thesis.
+In addition to shape-dependent catalytic activ- ity, lattice strain14 has a considerable influence on the reactivity of metal surfaces. By modifying the distances between surface atoms, tensile or compressive lattice strain induces an upward or down- ward shift of the d-band centre15, resulting, respectively, in a strengthening or weakening of the bonding to adsorbed reacting species. In platinum (Pt) for instance, a 1\% tensile (compressive) strain can upshift (downshift) the 5d-band by as much as ~ 0.1 eV16, dramatically affecting the surface reactivity17 and in turn the catalytic activity (dupraz)
+pareil dans suzana 2019
 
-In a crystalline lattice, the energy levels of electrons are so close that they form bands \parencite{Ashcroft76}, the study considers that the energy levels of the \textit{d}-bands in transition metals is responsible for bonding and adsorption in catalytic reactions, the main conclusion being that there is a direct relation between lattice strain, adsorption energy and surface reactivity, which has been confirmed by later studies \parencite{Kitchin2004, Kibler2005, Ontaneda2015}.
-Moreover, d-bands narrowing effect also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, Desjonqueres1975, Egelhoff1987, Hammer2006}.
-\textcolor{Important}{Check ref CA, also d-band centre ?}
-The application of this work has been demonstrated by Wang et al. in \cite*{Wang2016} and is at the origin of many scientific studies for strain engineering in catalysis, probed with techniques sensitive to the catalyst structure, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, Ulvestad2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
+ALSO OF IMPORTANCE IS THE COORDINATION NUMBER
 
+A modern theoretical approach to the interaction between surface and adsorbates in heterogeneous catalysis has been proposed by Hammer, Norskov and Mavrikakis \parencite*{Hammer1995, Mavrikakis1998, Hammer2000} for transition metals, which is at the origin of the strain-reactivity studies in the frame of this thesis.
+
+In a crystalline lattice, the energy levels of electrons are so close that they form bands \parencite{Ashcroft76}, the study considers that the energy levels of the \textit{d}-bands in transition metals is responsible for bonding and adsorption in catalytic reactions, the main conclusion being that there is a direct relation between lattice strain, adsorption energy and surface reactivity, which has been confirmed by later studies \parencite{Jakob2001, Kitchin2004, Kibler2005, Gsell1998, Ontaneda2015, Weissmuller2019}.
+Moreover, d-bands narrowing effect also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, Desjonqueres1975, Egelhoff1987, Hammer2006, Khorshidi2018}.
+\textcolor{Important}{Check ref CA, also d-band centre ?, write more about scaling reactions, surface strain etc}
+
+Two parameters are of key importance when investigating the role of the nanoparticle structure in its catalytic activity and selectivity, the link between particle shape/size and the type of facets, edges and corners exhibited on the surface, and the importance of the strain field in the adsorption of molecules participating in the reaction \parencite{Abuin2019}.
+
+The application of this approach has been demonstrated by Wang et al. in \cite*{Wang2016}, which pionereed scientific studies for strain engineering in catalysis \parencite{NilssonPingel2018}, probed with techniques sensitive to the catalyst structure \parencite{Somorjai1991}, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, Ulvestad2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
