--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -1,4 +1,4 @@
-\section{Surface x-ray diffraction on a Pt (111) single crystal} \label{sec:SXRD111}
+\section{Pt (111) single crystal studied at \qty{450}{\degreeCelsius}} \label{sec:SXRD111}
 
 Platinum crystallises in a face-centred cubic structure with a lattice parameter $a_{Pt}$ equal to \qty{3.9242}{\angstrom} at room temperature.
 Its structure was first presented in sec. \ref{sec:ScatCrystal} to introduce the notions of crystals.
@@ -18,17 +18,11 @@ The out-of-plane vector $\vec{c}_{(111)}$ is perpendicular to the (111) plane, a
     \label{fig:SurfaceUnitCellPt111}
 \end{SCfigure}
 
-\subsection{Ammonia oxidation cycle}
+\subsection{Oxide growth under \qty{80}{\milli\bar} of oxygen}
 
 To be able to identify the presence of surface reconstructions and/or surface oxides, in-plane reciprocal space maps were collected at the atmospheres detailed in tab. \ref{tab:ConditionsSXRD} by rotating the in-plane sample and detector angles ($\omega$ and $\gamma$) from \ang{0} to \ang{120} to collect a third of the reciprocal space in the ($\vec{q}_x$, $\vec{q}_y$) plane, considering a hexagonal symmetry in the position of the Bragg peaks.
 
 The reciprocal space in-plane map were computed in both $q$-space (to obtain the interplanar spacing related to the observed signals) and ($hkl$)-space (fig. \ref{fig:MapsPt111A} and \ref{fig:MapsPt111B}) to visualise the arrangement of surface structures or surface relaxations in comparison with the hexagonal structure of the Pt atoms on the (111) surface, the $H$ and $K$ values being computed using the hexagonal surface unit cell described above.
-
-% The alignment of the sample was often lost during reciprocal space maps which prevented long continuous measurements, even under inert atmosphere (e.g. fig. \ref{fig:MapsPt111B} - \qty{500}{\milli\bar} of Argon).
-% The sample proved to be more stable after having lowered the pressure of oxygen in the reactor (fig. \ref{fig:MapsPt111B}).
-
-% Despite an extra layer of Boron Nitride that was applied around the screws used to fix the sample to the sample holder (fig. \ref{fig:SampleHolder}), the high temperature and highly oxidating atmosphere managed twice to corrode the conducting screws which resulted in a contact loss with the heater, thus a change of heater and realignment of the sample surface.
-% However, most of the experimental plan was still carried out, lacking only in-plane measurements at \qty{600}{\degreeCelsius} under \qty{8}{\ml\per\min} of oxygen and \qty{1}{\ml\per\min} of ammonia (tab. \ref{tab:Conditions}), due to a lack of experimental time.
 
 \begin{figure}[!htb]
     \centering
@@ -37,13 +31,13 @@ The reciprocal space in-plane map were computed in both $q$-space (to obtain the
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_481-516_patched.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_681-689_patched.pdf}
     \caption{
-        reciprocal space in-plane maps collected under different atmospheres measured at \qty{25}{\degreeCelsius} under UHV and at \qty{450}{\degreeCelsius} under different atmospheres, with a total pressure equal to \qty{500}{\milli\bar}, computed using the hexagonal lattice of Pt (111).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{25}{\degreeCelsius} under UHV and at \qty{450}{\degreeCelsius} under different atmospheres, with a total pressure equal to \qty{500}{\milli\bar}, computed using the hexagonal lattice of Pt (111).
     }
     \label{fig:MapsPt111A}
 \end{figure}
 
 The first map was collected at low pressure (\qty{<1e-5}{\milli\bar}) after the cleaning of the sample by sputtering and annealing.
-The ($\bar{1}$$\bar{1}$0) and ($\bar{2}$10) Bragg peaks can be observed, together with the extremity of [111]-oriented crystal truncation rods going through the [0, $\bar{2}$, 0], [0, $\bar{1}$, 0], [$\bar{1}$, 0, 0], [$\bar{1}$, 1, 0], and [$\bar{2}$, 0, 0] positions in reciprocal space.
+The ($\bar{1}$$\bar{1}$0) and ($\bar{2}$10) Bragg peaks can be observed, together with the bottom of [111]-oriented crystal truncation rods going through the [0, $\bar{2}$], [0, $\bar{1}$], [$\bar{1}$, 0], [$\bar{1}$, 1], and [$\bar{2}$, 0] positions in the (H, K) plane.
 
 New peaks can first be observed under \qty{80}{\milli\bar} of oxygen, identified by different colour circles in fig. \ref{fig:MapsPt111A}, the corresponding interplanar spacings are given in tab. \ref{tab:InterplanarSpacingsPt111Oxygen}.
 The angle between the peaks circled in grey and white and the peaks circled in red and purple is equal to \ang{60}, which could be the signature of the existence of two hexagonal surface structures, each rotated by $\pm \ang{6}$ with respect to the Pt (111) surface unit cell and with a larger in-plane lattice parameter.
@@ -56,14 +50,14 @@ Therefore, there is approximately \qty{1}{\hour} between the measurement of the 
 
 A second map was measured in a smaller region of the reciprocal space \qty{9}{\hour}\qty{30}{\minute} after the introduction of oxygen in the cell (fig. \ref{fig:MapsPt111A}) to see if the intensity and position of the newly found peaks changed.
 The measurement of this map took about \qty{1}{\hour}\qty{15}{\minute}.
-Three additional peaks (circled in black) appeared on a (8X8) coincidence with comparison to the hexagonal lattice of Pt (111), describing also a hexagonal lattice (drawn in black dotted lines) of lattice parameter equal to $|\vec{a_{hex}}| = \qty{3.118}{\angstrom}$.
+Three additional peaks (circled in black) appeared on a (8x8) coincidence with comparison to the hexagonal lattice of Pt (111), describing also a hexagonal lattice (drawn in black dotted lines) of lattice parameter equal to $|\vec{a_{hex}}| = \qty{3.118}{\angstrom}$.
 
 The grey circled peak seems to have disappeared from the reciprocal map, but an additional peak circled in red is revealed at \ang{120} from the other peak circled in red, and \qty{60} from the peak circled in grey, at the same distance from the centre.
-From these first measurement, a first hypothesis to explain the position of the observed peaks is that (i) there first appears two rotated hexagonal structures with a larger in-plane lattice parameter in comparison to Pt (111), (ii) there secondly appears a (8X8) hexagonal structure while measuring the large reciprocal space in-plane map, also with a larger in-plane lattice parameter, but in the same direction as the in-plane unit cell vectors of Pt (111), explaining the position of the black circled peak in the first map.
+From these first measurement, a first hypothesis to explain the position of the observed peaks is that (i) there first appears two rotated hexagonal structures with a larger in-plane lattice parameter in comparison to Pt (111), (ii) there secondly appears a (8x8) hexagonal structure while measuring the large reciprocal space in-plane map, also with a larger in-plane lattice parameter, but in the same direction as the in-plane unit cell vectors of Pt (111), explaining the position of the black circled peak in the first map.
 It is possible that the disappearance of the grey circle peak is linked to some alignment problems, visible from the large low intensity region in fig. \ref{fig:MapsPt111A}.
 
-Out-of-plane measurements were performed perpendicular to peaks belonging to the (8X8) hexagonal structure, [H, K] = [-0.89, 0] (fig. \ref{fig:LScans80} - a), and rotated hexagonal structures, [H, K] = [-0.15, -0.74] (fig. \ref{fig:LScans80} - b), to probe their 3D structures.
-A second out-of-plane measurement was performed at [H, K] = [-1.78, 0] to probe the intensity of a potential second-order peak for the (8X8) hexagonal structure (fig. \ref{fig:LScans80} - c), \qty{10}{\hour} after the measurement perpendicular to [H, K] = [-0.89, 0].
+Out-of-plane measurements were performed perpendicular to peaks belonging to the (8x8) hexagonal structure, [H, K] = [-0.89, 0] (fig. \ref{fig:LScans80} - a), and rotated hexagonal structures, [H, K] = [-0.15, -0.74] (fig. \ref{fig:LScans80} - b), to probe their 3D structures.
+A second out-of-plane measurement was performed at [H, K] = [-1.78, 0] to probe the intensity of a potential second-order peak for the (8x8) hexagonal structure (fig. \ref{fig:LScans80} - c), \qty{10}{\hour} after the measurement perpendicular to [H, K] = [-0.89, 0].
 The background-subtracted scattered intensity was integrated as a function of $L$ using the \textit{fitaid} module of \textit{binoculars} (fig. \ref{fig:LScans80}).
 
 \begin{figure}[!htb]
@@ -97,12 +91,13 @@ Four different bulk platinum oxides have been reported to exist in literature, $
     %}
     \caption{
     Experimental values taken from \cite{McBride1991} for \ce{PtO}, from \cite{Muller1968} for \ce{Pt_3O_4} and $\alpha$-\ce{PtO_2}, and from \cite{McBride1991} for $\beta$-\ce{PtO_2}.
-    Theoretical values and table adapted from \cite{Seriani2006}.
+    Theoretical values and table adapted from Seriani et al. \parencite*{Seriani2006}.
+    Similar values have been reported by Nomiyama et al. \parencite*{Nomiyama2011} from DFT calculations.
     }
 \label{tab:PtOxides}
 \end{table}
 
-The lack of peaks at $L=0$ in fig. \ref{fig:LScans80} for the (8X8) hexagonal structure shows that there is no bulk structure on the catalyst surface.
+The lack of peaks at $L=0$ in fig. \ref{fig:LScans80} for the (8x8) hexagonal structure shows that there is no bulk structure on the catalyst surface.
 However, Seriani et al. \parencite*{Seriani2006} have also found that the most stable surface oxide on the Pt (111) surface is expected to be hexagonal $\alpha$-\ce{PtO_2}.
 A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallisation of the bulk oxide \parencite{Muller1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{Li2005}.
 
@@ -127,7 +122,7 @@ Ellinger et al. \parencite*{Ellinger2008} proposed a surface model for surface $
 The question of the epitaxial relation between both structures remains, since the proposed structure does come with a large misfit strain (\qty{13.5}{\percent}) when in a hexagonal on hexagonal arrangement.
 % Ellinger et al. \parencite*{Ellinger2008} proposed
 % As our ﬁt is not compatible with domain formation, we are forced to conclude that oxide formation is initiated at step edges.
-Similarly to the current experiment, an (8X8) coincidence is reported between the Pt (111) hexagonal surface and surface $\alpha$-\ce{PtO_2}.
+Similarly to the current experiment, an (8x8) coincidence is reported between the Pt (111) hexagonal surface and surface $\alpha$-\ce{PtO_2}.
 The out-of-plane measurements in \cite{Ellinger2008} also performed perpendicular to [H, K] = [-0.89, 0] presents a peak at $L=0.65$ ($L$ computed using the distorted $\alpha$-\ce{PtO_2} unit cell).
 
 The two $L$-scans performed in the current study were fitted using two Gaussian peaks of same full width at half maxima (FWHM) and a constant background (fig. \ref{fig:LScans80Fit}), the second peak near $L=1$ in the $L$-scan perpendicular to [H, K] = [-0.89, 0] comes from a Pt powder signal.
@@ -173,7 +168,10 @@ By combining the information obtained from in-plane, out-of-plane and reflectivi
 %     \label{fig:PtO2OnPt111}
 % \end{figure}
 
+\subsection{Near ambient pressure ammonia oxidation cycle}
+
 Ammonia was subsequently introduced in the reactor cell to investigate the evolution of the platinum oxide structures, as well as the presence of additional surface structures or surface reconstructions during the oxidation of ammonia on the platinum surface (fig. \ref{fig:MapsPt111B}).
+The presence of $\alpha$-PtO$_2$ on Pt (111) has been shown to not hinder the oxidation of \ce{CO} by Ackermann et al. \parencite*{Ackermann2007}, that would then occur \textit{via} a Mars-Van Krevelen mechanism \parencite{Mars1954}, inducing a progressive roughnening of the platinum surface.
 
 \begin{figure}[!htb]
     \centering
@@ -182,14 +180,17 @@ Ammonia was subsequently introduced in the reactor cell to investigate the evolu
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_1413-1448.pdf}
     \includegraphics[width=0.495\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_hkl_1458-1493.pdf}
     \caption{
-        reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the hexagonal lattice of Pt (111).
+        Reciprocal space in-plane maps collected under different atmospheres measured at \qty{450}{\degreeCelsius}, computed using the hexagonal lattice of Pt (111).
     }
     \label{fig:MapsPt111B}
 \end{figure}
 
-None of the previously observed peaks could be discerned anew, and no additional peaks emerged.
+During the oxidation of ammonia, none of the previously observed peaks could not be discerned anew, while no additional peaks emerged.
 Even when the oxygen pressure within the cell was reduced to \qty{5}{\milli\bar} (favouring alternate products) or eliminated at \qty{0}{\milli\bar}, there was no induction of surface reconstructions or surface structures.
+This result shows that the reaction removes the oxide layer present of the surface until the structure disappears.
+No transition between the reaction products is observed in the first hours following the introduction of ammonia in the reactor (fig. \ref{fig:RGA450Pt111_2}, the presence of the surface oxide at the beginning of the condition seemingly not influencing the product selectivity.
 All reciprocal space in-plane maps following the introduction of ammonia to a final atmosphere of \qty{500}{\milli\bar} of Argon showed a pristine surface structure, proving the oxidation cycle is reproducible and that ammonia effectively removed the different surface oxides that grew under \qty{80}{\milli\bar} of oxygen.
+The low roughness of the platinum surface seems to be in contradiction with a possible Mars-Van Krevelen mechanism during the oxidation of ammonia.
 
 \begin{figure}[!htb]
     \centering
@@ -206,7 +207,7 @@ In accordance with the results of the in-plane reciprocal space maps in fig. \re
 The roughness of the [111]-oriented platinum crystal decreases following the introduction of ammonia after having increased to \qty{\approx 2.61}{\angstrom} when being exposed to \qty{80}{\milli\bar} of oxygen for more than \qty{20}{hours}, almost reaching its value before the start of the oxidation cycle.
 The largest decrease in roughness is seen during the reacting conditions.
 
-\subsection{Oxide growth monitored under \qty{5}{\milli\bar} of \ce{O_2}}
+\subsection{Oxide growth under \qty{5}{\milli\bar} of oxygen}
 
 Following the complete ammonia oxidation cycle, the sample was put under \qty{5}{\milli\bar} of oxygen to see if any of the detected surface structures would come to grow again, and to de-correlate the effect of the simultaneous presence of ammonia and oxygen in the cell on the surface when favouring the production of nitrogen at lower oxygen pressures.
 The sample was cleaned with two sputtering and annealing cycles before the introduction of oxygen.
@@ -217,7 +218,7 @@ The larger reciprocal space in-plane maps are presented in fig. \ref{fig:LargeMa
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/large_maps_05O2.pdf}
     \caption{
-        reciprocal space in-plane maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
+        Reciprocal space in-plane maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
     }
     \label{fig:LargeMapsPt111LowOxygen}
 \end{figure}
@@ -227,7 +228,7 @@ Only the grey circled peak cannot be detected until \qty{4}{hours} of measuremen
 This splitting of the peaks could be the signature of a Pt (111) surface covered by different domains exhibiting similar hexagonal structures, slightly different from each other, while being themselves rotated by $\pm \ang{6}$ with respect to the Pt (111) surface unit cell with a higher magnitude of the in-plane lattice parameter, similarly to what has been observed under an oxygen pressure of \qty{80}{\milli\bar}.
 A peak can be observed at [-0.89, -0.89] in the only large reciprocal space in-plane map collected between \qty{41}{\minute} and \qty{4}{\hour}\qty{3}{\minute} after the start of the condition, at the same position as in the first large reciprocal space in-plane map measured under \qty{80}{\milli\bar} of oxygen.
 The peak position corresponds to the ($\bar{1}\bar{1}0$)$_{\alpha-PtO_2}$ Bragg peak of bulk $\alpha-PtO_2$, but no peaks at [-0.89, 0, 0] and [0, -0.89, 0] positions can be detected (respectively ($\bar{1}00$)$_{\alpha-PtO_2}$ and ($0\bar{1}0$)$_{\alpha-PtO_2}$).
-The nature of the peak situated at [-0.89, -0.89] is not yet clear since it appears before the [-0.89, 0] and [0, -0.89] peaks, all three positions corresponding to the (8X8) hexagonal structure.
+The nature of the peak situated at [-0.89, -0.89] is not yet clear since it appears before the [-0.89, 0] and [0, -0.89] peaks, all three positions corresponding to the (8x8) hexagonal structure.
 As mentioned before, it is possible to draw a surface unit cell including this peak together with the white and purple circled peak, but with an in-plane angle $\gamma^*$ equal in this case to \ang{42.13}.
 
 The area sampled during the measurement was extended in the two last maps which allows us to observe more signals around the ($1\bar{1}0$) region.
@@ -242,7 +243,7 @@ Smaller maps taken with a shorter time interval are presented in fig. \ref{fig:S
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/small_maps_05O2.pdf}
     \caption{
-        reciprocal space in-plane maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
+        Reciprocal space in-plane maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, for different exposure times.
     }
     \label{fig:SmallMapsPt111LowOxygen}
 \end{figure}
@@ -414,7 +415,7 @@ Considering the gases present in the reactor cell, the expected species are NH2,
     \label{fig:Pt4fPt111}
 \end{figure}
 
-For the peaks that showed a good signal to noise ratio, the fitting of the peak shape was realised thanks to the \textit{lmfit} \parencite{Newville2016} package by the means of the Doniach-equation which is the best approximation of the asymmetric peak shape resulting from the convolution of the analyser function and the photoelectron process in metals \parencite{Doniach_1970}.
+For the peaks that showed a good signal to noise ratio, the fitting of the peak shape was realised thanks to the \textit{lmfit} \parencite{Newville2016} package by the means of the Doniach-equation which is the best approximation of the asymmetric peak shape resulting from the convolution of the analyser function and the photoelectron process in metals \parencite{Doniach1970}.
 
 On pure Pt, an important body of work has been already carried out, revealing several bulk oxide structures present in the probed temperature and pressure ranges, as well as the presence of surface oxides depending on the structure of the crystal surface.
 
